[package]
name = "fake_patient_data"
version = "0.1.0"
authors = ["Pedro Paulo de Amorim <pp.amorim@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.4", features=['derive']}
rand = "0.8"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"